--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -1559,11 +1559,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# format data form OpenAI GPT3.5 fine-tuning in JSONL format\n",
+    "# format data OpenAI GPT3.5 fine-tuning in JSONL format\n",
     "# format: {\"messages\": [{\"role\": \"system\", \"content\": <system prompt>}, {\"role\": \"user\", \"content\": <description>}, {\"role\": \"assistant\", \"content\": <pass or fail> <reason>}]}\n",
     "system_prompt = \"\"\"You are an AI text quality reviewer tool. Your task is to review technical descriptions for data entities and attributes. Based on the quality of the description, you will output either 'Pass' or 'Fail'.\n",
     "'Pass' means the description meets the quality standards and provides clear, accurate, and complete information.\n",
@@ -1581,6 +1581,25 @@
     "        content = {\"messages\": [{\"role\": \"system\", \"content\": system_prompt}, {\"role\": \"user\", \"content\": row['description']}, {\"role\": \"assistant\", \"content\": f\"{\"pass,\" if row['pass'] else \"fail,\"} {row['reason']}\"}]}\n",
     "        json.dump(content, f)\n",
     "        f.write('\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# format data in Alpaca format\n",
+    "# format: {\"instruction\": <system prompt>, \"input\": <description>, \"output\": <pass or fail> <reason>}\n",
+    "# write as json file [{}, {}, ...]\n",
+    "\n",
+    "with open('data/train_alpaca.json', 'w') as f:\n",
+    "    content_list = []\n",
+    "    for i, row in train_df.iterrows():\n",
+    "        content = {\"instruction\": system_prompt, \"input\": row['description'], \"output\": f\"{\"pass,\" if row['pass'] else \"fail,\"} {row['reason']}\"}\n",
+    "        content_list.append(content)\n",
+    "    json.dump(content_list, f)\n",
+    "    f.write('\\n')"
    ]
   },
   {
