Updated reverse engineer prompt

--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -1482,18 +1482,18 @@
     "# format: {\"messages\": [{\"role\": \"system\", \"content\": <system prompt>}, {\"role\": \"user\", \"content\": <description>}, {\"role\": \"assistant\", \"content\": <pass or fail> <reason>}]}\n",
     "system_prompt = \"\"\"You are an AI text quality reviewer tool. Your task is to review technical descriptions for data entities and attributes. Based on the quality of the description, you will output either 'Pass' or 'Fail'.\n",
     "'Pass' means the description meets the quality standards and provides clear, accurate, and complete information.\n",
-    "'Fail' means the description does not meet the required standards, and you must provide a specific reason for the failure.\n",
-    "Your output format will be: <Pass or Fail>, <N/A or reason for failure>\"\"\"\n",
+    "'Fail' means the description does not meet the required standards. Provide reasoning for your decision.\n",
+    "Your output format will be: <Reasoning for Pass or Fail>, <Pass or Fail>\"\"\"\n",
     "\n",
     "with open('data/train.jsonl', 'w') as f:\n",
     "    for i, row in train_df.iterrows():\n",
-    "        content = {\"messages\": [{\"role\": \"system\", \"content\": system_prompt}, {\"role\": \"user\", \"content\": row['description']}, {\"role\": \"assistant\", \"content\": f\"{\"pass,\" if row['pass'] else \"fail,\"} {row['reason']}\"}]}\n",
+    "        content = {\"messages\": [{\"role\": \"system\", \"content\": system_prompt}, {\"role\": \"user\", \"content\": row['description']}, {\"role\": \"assistant\", \"content\": f\"{row['reason']}, {'pass' if row['pass'] else 'fail'}\"}]}\n",
     "        json.dump(content, f)\n",
     "        f.write('\\n')\n",
     "\n",
     "with open('data/test.jsonl', 'w') as f:\n",
     "    for i, row in test_df.iterrows():\n",
-    "        content = {\"messages\": [{\"role\": \"system\", \"content\": system_prompt}, {\"role\": \"user\", \"content\": row['description']}, {\"role\": \"assistant\", \"content\": f\"{\"pass,\" if row['pass'] else \"fail,\"} {row['reason']}\"}]}\n",
+    "        content = {\"messages\": [{\"role\": \"system\", \"content\": system_prompt}, {\"role\": \"user\", \"content\": row['description']}, {\"role\": \"assistant\", \"content\": f\"{row['reason']}, {'pass' if row['pass'] else 'fail'}\"}]}\n",
     "        json.dump(content, f)\n",
     "        f.write('\\n')"
    ]
