Fix formatting errors in training data

--- a/training_data_creation.ipynb
+++ b/training_data_creation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
        "4  If it is a direct mapping to Commerical attrib...  True  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
        "4  This description provides essential source inf...  False  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
        "4  If it is a direct mapping to Commerical attrib...  True  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,19 +329,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "fail\n",
-       "False    349\n",
-       "True     202\n",
+       "False    344\n",
+       "True     207\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +349,7 @@
    "source": [
     "# hold out 10% of the data for testing\n",
     "from sklearn.model_selection import train_test_split\n",
-    "train_df, test_df = train_test_split(df, test_size=0.1)\n",
+    "train_df, test_df = train_test_split(df, test_size=0.1, random_state=42)\n",
     "\n",
     "train_df.value_counts(\"fail\")\n",
     "\n"
@@ -357,19 +357,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "fail\n",
-       "False    34\n",
-       "True     28\n",
+       "False    39\n",
+       "True     23\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,6 +410,13 @@
     "        assistant_msg = f\"Reason: {row['comment']}\\nDecision: {'Pass' if row['fail'] == False else 'Fail'}\"\n",
     "        f.write(f'{{\"text\": \"<|system|>{system_msg}<|end|><|user|>{user_msg}<|end|><|assistant|>{assistant_msg}\"}}\\n')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
