Fixed training and testing datasets

--- a/training_data_creation.ipynb
+++ b/training_data_creation.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +129,7 @@
        "4  If it is a direct mapping to Commerical attrib...  True  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +224,7 @@
        "4  This description provides essential source inf...  False  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +317,7 @@
        "4  If it is a direct mapping to Commerical attrib...  True  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +330,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# clean any newlines or quotes from the description column\n",
+    "df['description'] = df['description'].str.replace('\\n', ' ')\n",
+    "df['description'] = df['description'].str.replace('\"', \"'\")\n",
+    "# clean any newlines or quotes from the comment column\n",
+    "df['comment'] = df['comment'].str.replace('\\n', ' ')\n",
+    "df['comment'] = df['comment'].str.replace('\"', \"'\")\n",
+    "\n",
+    "# turn text columns into raw strings\n",
+    "df['description'] = df['description'].str.encode('unicode_escape').str.decode('utf-8')\n",
+    "df['comment'] = df['comment'].str.encode('unicode_escape').str.decode('utf-8')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +360,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +388,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,18 +399,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
-    "system_msg = \"\"\"You are a helpful AI assistant that reviews technical descriptions for data entities and attributes.\n",
-    "Your task is to determine whether the description meets quality standards. If it does, respond with **Pass**. If not, respond with **Fail**.\n",
-    "- A **Pass** means the description is clear, complete, and accurately describes the attribute and its source.\n",
-    "- A **Fail** means the description lacks clarity, completeness, or essential details.\n",
-    "Please provide a short explanation for your decision.\n",
-    "Your output format should be:\n",
-    "Reason: <your explanation>  \n",
-    "Decision: Pass or Fail\"\"\"\n",
+    "system_msg = \"You are a helpful AI assistant that reviews technical descriptions for data entities and attributes. \\\n",
+    "Your task is to determine whether the description meets quality standards. If it does, respond with **Pass**. If not, respond with **Fail**. \\\n",
+    "- A **Pass** means the description is clear, complete, and accurately describes the attribute and its source. \\\n",
+    "- A **Fail** means the description lacks clarity, completeness, or essential details. \\\n",
+    "Please provide a short explanation for your decision. \\\n",
+    "Your output format should be: \\\n",
+    "Reason: <your explanation>  \\\n",
+    "Decision: Pass or Fail\"\n",
     "\n",
     "# output to jsonl files with format:\n",
     "# {text: “<|system|>{system_msg}<|end|><|user|>{user_msg}<|end|><|assistant|>{assistant_msg}”}\n",
@@ -399,16 +418,29 @@
     "# train data\n",
     "with open(\"data/train_ALL.jsonl\", \"w\") as f:\n",
     "    for i, row in train_df.iterrows():\n",
-    "        user_msg = f\"Description: {row['description']}\"\n",
-    "        assistant_msg = f\"Reason: {row['comment']}\\nDecision: {'Pass' if row['fail'] == False else 'Fail'}\"\n",
+    "        user_msg = fr\"Description: {row['description']}\"\n",
+    "        assistant_msg = fr\"Reason: {row['comment']} Decision: {'Pass' if row['fail'] == False else 'Fail'}\"\n",
     "        f.write(f'{{\"text\": \"<|system|>{system_msg}<|end|><|user|>{user_msg}<|end|><|assistant|>{assistant_msg}\"}}\\n')\n",
     "\n",
     "# test data\n",
     "with open(\"data/test_ALL.jsonl\", \"w\") as f:\n",
     "    for i, row in test_df.iterrows():\n",
-    "        user_msg = f\"Description: {row['description']}\"\n",
-    "        assistant_msg = f\"Reason: {row['comment']}\\nDecision: {'Pass' if row['fail'] == False else 'Fail'}\"\n",
-    "        f.write(f'{{\"text\": \"<|system|>{system_msg}<|end|><|user|>{user_msg}<|end|><|assistant|>{assistant_msg}\"}}\\n')"
+    "        user_msg = fr\"Description: {row['description']}\"\n",
+    "        assistant_msg = fr\"Reason: {row['comment']} Decision: {'Pass' if row['fail'] == False else 'Fail'}\"\n",
+    "        f.write(f'{{\"text\": \"<|system|>{system_msg}<|end|><|user|>{user_msg}<|end|><|assistant|>{assistant_msg}\"}}\\n')\n",
+    "\n",
+    "# output test to jsonl files with format:\n",
+    "# description: <description>, fail: <fail>\n",
+    "with open(\"data/test_ALL_with_labels.jsonl\", \"w\") as f:\n",
+    "    for i, row in test_df.iterrows():\n",
+    "        json_line = json.dumps({\"description\": row['description'], \"fail\": row['fail']})\n",
+    "        f.write(json_line + \"\\n\")\n",
+    "\n",
+    "# test without labels\n",
+    "with open(\"data/test_ALL_no_labels.jsonl\", \"w\") as f:\n",
+    "    for i, row in test_df.iterrows():\n",
+    "        user_msg = fr\"Description: {row['description']}\"\n",
+    "        f.write(f'{{\"text\": \"<|system|>{system_msg}<|end|><|user|>{user_msg}<|end|>\"}}\\n')"
    ]
   },
   {
@@ -423,6 +455,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
